# search-experiments

./: .flake8  .gitignore  .tool-versions  AGENTS.md  Makefile  README.md  champlain.csv  codegen_prd.md  memray-flamegraph-bm25.html  memray-flamegraph-bm25_100.html  memray-flamegraph-bm25_100_leaks.html  memray-flamegraph-bm25_200.html  notebooks_prd.md  prd.md  profile.prof  pyproject.toml
.tmp/: bm25_cache_runner.patch
configs/: agentic_bm25_embeddings.yml  agentic_ecom_2tools_e5_gpt5_mini.yml  agentic_ecom_2tools_gpt5.yml  agentic_ecom_2tools_gpt5_mini.yml  agentic_ecom_2tools_gpt5_mini_e5_base_v2.yml  agentic_ecom_2tools_required_calls.yml  agentic_ecom_bm25_gpt5.yml  agentic_ecom_bm25_gpt5_mini.yml  agentic_ecom_e5_base_v2_gpt5_mini.yml  agentic_ecom_embedding_gpt5.yml  agentic_ecom_embedding_gpt5_mini.yml  agentic_ecom_embedding_gpt5_mini_e5_base_v2.yml  agentic_ecom_minilm_gpt5_mini.yml  agentic_msmarco.yml  agentic_msmarco_e5_base_v2.yml  agentic_wands_bm25_e5_gpt5_mini.yml  agentic_wands_bm25_minilm_e5_gpt5_mini.yml  bm25.yml  bm25_msmarco.yml  codegen_sample.yml  embedding_e5_base_v2.yml  embedding_minilm.yml
docs/: agentic_prd.md  codegen_prd.md  notebooks_agentic.md  notebooks_codegen.md  notebooks_prd.md  runner_tests_prd.md
exps/: __init__.py  agentic.py  bm25_debug_runner.py  bm25_utils.py  datasets.py  diff.py  embeddings.py  embeddings_utils.py  logging_utils.py  mapping.py  metrics.py  paths.py  query_runner.py  runner.py  strategy_config.py  strategy_factory.py  tools.py  trace_utils.py  train_runner.py  vectors_runner.py
notebooks/: agentic_ecom_2tools_wands.ipynb  bm25_ms_marco.ipynb
prf/: __init__.py  bm25_debug_runner.py  cache.py  datasets.py  diff.py  embeddings.py  embeddings_runner.py  mapping.py  mounting.py  query_runner.py  runner.py  strategy_config.py  tools.py  vectors_runner.py
research/: autoresearch.md
scripts/: plot_agentic_results.py  plot_codegen_replay_results.py  plot_codegen_run.py  plot_minimarco_results.py  plot_pareto_tool_calls.py  plot_results.py  profile_memray.sh  replay_codegen_rounds.py  run_codegen_variants.sh  run_ecom_agentic_stats.sh  run_ecom_baselines.sh  run_ecom_mincalls_stats.sh  run_minimarco_agentic_stats.sh  run_with_exit_log.sh  test_bm25_consistency.sh
tests/: test_bm25.py  test_bm25_matrix.py  test_bm25_vect.py  test_codegen_raw_bm25.py  (+5 more)
(+157 files in other folders)
