[project]
name = "prf"
version = "0.1.0"
description = "Pseudo relevance feedback benchmarks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cheat-at-search @ git+https://github.com/softwaredoug/cheat-at-search.git",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.1.0",
    "ipython>=9.3.0",
    "pytest>=8.4.1",
]

[project.scripts]
prf = "prf.runner:main"
prf-query = "prf.query_runner:main"
prf-diff = "prf.diff:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true
