[project]
name = "prf"
version = "0.1.0"
description = "Pseudo relevance feedback benchmarks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cheat-at-search @ git+https://github.com/softwaredoug/cheat-at-search.git@ce9c4a32",
    "pyyaml>=6.0.2",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.1.0",
    "ipython>=9.3.0",
    "pytest>=8.4.1",
    "snakeviz>=2.2.2",
]

[project.scripts]
run = "prf.runner:main"
query = "prf.query_runner:main"
diff = "prf.diff:main"
prf-rerank-debug = "prf.vectors_runner:main"
bm25-debug = "prf.bm25_debug_runner:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "memray>=1.19.3",
]
