[project]
name = "exps"
version = "0.1.0"
description = "Pseudo relevance feedback benchmarks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cheat-at-search @ git+https://github.com/softwaredoug/cheat-at-search.git@b86f38d1d513eb1f5f",
    "pyyaml>=6.0.2",
    "sentence-transformers>=5.4.1",
]

[project.optional-dependencies]
dev = [
    "flake8>=7.1.0",
    "ipython>=9.3.0",
    "matplotlib>=3.10.0",
    "pytest>=8.4.1",
    "snakeviz>=2.2.2",
]

[project.scripts]
run = "exps.runner:main"
query = "exps.query_runner:main"
diff = "exps.diff:main"

[build-system]
requires = ["hatchling>=1.24.2"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "memray>=1.19.3",
]
